# api/docs/swagger.json
@@ -1305,7 +1305,7 @@
                     "Customer"
                 ],
                 "summary": "Update PATCH Customer",
-                "operationId": "update_customer",
+                "operationId": "update_patch_customer",
                 "parameters": [
                     {
                         "type": "string",
@@ -2951,7 +2951,7 @@
                     "Staff"
                 ],
                 "summary": "Update PATCH Staff",
-                "operationId": "update_staff",
+                "operationId": "update_patch_staff",
                 "parameters": [
                     {
                         "type": "string",
@@ -3899,7 +3899,7 @@
                     "Store"
                 ],
                 "summary": "Update PATCH Store",
-                "operationId": "update_store",
+                "operationId": "update_patch_store",
                 "parameters": [
                     {
                         "type": "string",
